# m5-osmo-reckeeper

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.rej  README.md  README_JP.md  design-rough.md  flash.sh  monitor.sh  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  ble_simple.c  ble_simple.h  config.h  dji_protocol.c  dji_protocol.h  gps_module.c  gps_module.h  m5_wrapper.cpp  m5_wrapper.h  main.c  main.cpp  storage.c  storage.h
main/comm/: ble_simple.c
main/display/: display_helpers.c  display_helpers.h
main/handlers/: button_handlers.c  button_handlers.h  status_updater.c  status_updater.h  system_init.c  system_init.h
main/protocol/: crc16.c  crc16.h  crc32.c  crc32.h  dji_protocol_data_structures.h  dji_protocol_parser.c  dji_protocol_parser.h
main/ui/: ui.c  ui.h  ui_layout.c  ui_layout.h  ui_renderer.c  ui_renderer.h  ui_state.c  ui_state.h
main/utils/: m5_wrapper.cpp
tools/: build.sh  flash.sh  monitor.sh
